--- a/wp-content/themes/fr-starter-theme/resources/styles/components/_typography.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/components/_typography.scss
@@ -83,14 +83,14 @@ body:not(.wp-admin) {
     font-size: 18px;
     line-height: 32px;
     @include font-primary;
-    padding-top: 0px;
+    padding-top: 80px;
 
     @include breakpoint(lg down) {
         padding-top: 46px;
     }
 
     &.admin-bar {
-        padding-top: 81px;
+        padding-top: 112px;
     }
 }
 
@@ -100,6 +100,8 @@ label {
     }
 }
 body.home {
+    padding-top: 0px;
+    
     .fr-header {
         background: none;
         border-bottom: none;
