--- a/wp-content/themes/fr-starter-theme/resources/styles/global/_variables.scss
+++ b/wp-content/themes/fr-starter-theme/resources/styles/global/_variables.scss
@@ -4,3 +4,4 @@ $page-builder-container-max-width:1180px;
 $page-builder-row-vertical-padding: 96px;
 $page-builder-row-vertical-padding-mobile: 50px;
 $spacing-between-modules:96px;
+$spacing-between-modules-mobile:80px;
